First Commit for UI support of elevations layers
First Commit for UI support of elevations layers for the Distance
Inverse functionality.

--- a/DataReviewAndRepair/ParcelFabricQualityControl/Addin_ParcelFabricQualityControl/SourceCode/ParcelFabricQualityControl/InverseDistanceDlg.resx
+++ b/DataReviewAndRepair/ParcelFabricQualityControl/Addin_ParcelFabricQualityControl/SourceCode/ParcelFabricQualityControl/InverseDistanceDlg.resx
@@ -141,7 +141,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;button1.ZOrder" xml:space="preserve">
-    <value>10</value>
+    <value>9</value>
   </data>
   <data name="button2.Location" type="System.Drawing.Point, System.Drawing">
     <value>243, 291</value>
@@ -165,7 +165,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;button2.ZOrder" xml:space="preserve">
-    <value>9</value>
+    <value>8</value>
   </data>
   <data name="lblDistanceUnits1.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -192,7 +192,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;lblDistanceUnits1.ZOrder" xml:space="preserve">
-    <value>8</value>
+    <value>7</value>
   </data>
   <data name="lblRecalc.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -219,7 +219,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;lblRecalc.ZOrder" xml:space="preserve">
-    <value>7</value>
+    <value>6</value>
   </data>
   <data name="button3.Location" type="System.Drawing.Point, System.Drawing">
     <value>15, 291</value>
@@ -243,7 +243,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;button3.ZOrder" xml:space="preserve">
-    <value>6</value>
+    <value>5</value>
   </data>
   <data name="txtDistDifference.Location" type="System.Drawing.Point, System.Drawing">
     <value>38, 219</value>
@@ -271,7 +271,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;txtDistDifference.ZOrder" xml:space="preserve">
-    <value>5</value>
+    <value>4</value>
   </data>
   <data name="txtHeightParameter.Enabled" type="System.Boolean, mscorlib">
     <value>False</value>
@@ -304,7 +304,7 @@
     <value>panel1</value>
   </data>
   <data name="&gt;&gt;txtHeightParameter.ZOrder" xml:space="preserve">
-    <value>8</value>
+    <value>10</value>
   </data>
   <data name="chkApplyScaleFactor.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -331,7 +331,172 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;chkApplyScaleFactor.ZOrder" xml:space="preserve">
+    <value>3</value>
+  </data>
+  <data name="&gt;&gt;lblHeightInput.Name" xml:space="preserve">
+    <value>lblHeightInput</value>
+  </data>
+  <data name="&gt;&gt;lblHeightInput.Type" xml:space="preserve">
+    <value>System.Windows.Forms.Label, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;lblHeightInput.Parent" xml:space="preserve">
+    <value>panel1</value>
+  </data>
+  <data name="&gt;&gt;lblHeightInput.ZOrder" xml:space="preserve">
+    <value>0</value>
+  </data>
+  <data name="&gt;&gt;cboElevField.Name" xml:space="preserve">
+    <value>cboElevField</value>
+  </data>
+  <data name="&gt;&gt;cboElevField.Type" xml:space="preserve">
+    <value>System.Windows.Forms.ComboBox, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;cboElevField.Parent" xml:space="preserve">
+    <value>panel1</value>
+  </data>
+  <data name="&gt;&gt;cboElevField.ZOrder" xml:space="preserve">
+    <value>1</value>
+  </data>
+  <data name="&gt;&gt;btnGetScaleFromEditor.Name" xml:space="preserve">
+    <value>btnGetScaleFromEditor</value>
+  </data>
+  <data name="&gt;&gt;btnGetScaleFromEditor.Type" xml:space="preserve">
+    <value>System.Windows.Forms.Button, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;btnGetScaleFromEditor.Parent" xml:space="preserve">
+    <value>panel1</value>
+  </data>
+  <data name="&gt;&gt;btnGetScaleFromEditor.ZOrder" xml:space="preserve">
+    <value>2</value>
+  </data>
+  <data name="&gt;&gt;cboUnits.Name" xml:space="preserve">
+    <value>cboUnits</value>
+  </data>
+  <data name="&gt;&gt;cboUnits.Type" xml:space="preserve">
+    <value>System.Windows.Forms.ComboBox, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;cboUnits.Parent" xml:space="preserve">
+    <value>panel1</value>
+  </data>
+  <data name="&gt;&gt;cboUnits.ZOrder" xml:space="preserve">
+    <value>3</value>
+  </data>
+  <data name="&gt;&gt;btnChange.Name" xml:space="preserve">
+    <value>btnChange</value>
+  </data>
+  <data name="&gt;&gt;btnChange.Type" xml:space="preserve">
+    <value>System.Windows.Forms.Button, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;btnChange.Parent" xml:space="preserve">
+    <value>panel1</value>
+  </data>
+  <data name="&gt;&gt;btnChange.ZOrder" xml:space="preserve">
     <value>4</value>
+  </data>
+  <data name="&gt;&gt;txtElevationLyr.Name" xml:space="preserve">
+    <value>txtElevationLyr</value>
+  </data>
+  <data name="&gt;&gt;txtElevationLyr.Type" xml:space="preserve">
+    <value>System.Windows.Forms.TextBox, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;txtElevationLyr.Parent" xml:space="preserve">
+    <value>panel1</value>
+  </data>
+  <data name="&gt;&gt;txtElevationLyr.ZOrder" xml:space="preserve">
+    <value>5</value>
+  </data>
+  <data name="&gt;&gt;cboScaleMethod.Name" xml:space="preserve">
+    <value>cboScaleMethod</value>
+  </data>
+  <data name="&gt;&gt;cboScaleMethod.Type" xml:space="preserve">
+    <value>System.Windows.Forms.ComboBox, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;cboScaleMethod.Parent" xml:space="preserve">
+    <value>panel1</value>
+  </data>
+  <data name="&gt;&gt;cboScaleMethod.ZOrder" xml:space="preserve">
+    <value>6</value>
+  </data>
+  <data name="&gt;&gt;txtScaleFactor.Name" xml:space="preserve">
+    <value>txtScaleFactor</value>
+  </data>
+  <data name="&gt;&gt;txtScaleFactor.Type" xml:space="preserve">
+    <value>System.Windows.Forms.TextBox, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;txtScaleFactor.Parent" xml:space="preserve">
+    <value>panel1</value>
+  </data>
+  <data name="&gt;&gt;txtScaleFactor.ZOrder" xml:space="preserve">
+    <value>7</value>
+  </data>
+  <data name="&gt;&gt;optComputeForMe.Name" xml:space="preserve">
+    <value>optComputeForMe</value>
+  </data>
+  <data name="&gt;&gt;optComputeForMe.Type" xml:space="preserve">
+    <value>System.Windows.Forms.RadioButton, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;optComputeForMe.Parent" xml:space="preserve">
+    <value>panel1</value>
+  </data>
+  <data name="&gt;&gt;optComputeForMe.ZOrder" xml:space="preserve">
+    <value>8</value>
+  </data>
+  <data name="&gt;&gt;optUserEnteredScaleFactor.Name" xml:space="preserve">
+    <value>optUserEnteredScaleFactor</value>
+  </data>
+  <data name="&gt;&gt;optUserEnteredScaleFactor.Type" xml:space="preserve">
+    <value>System.Windows.Forms.RadioButton, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;optUserEnteredScaleFactor.Parent" xml:space="preserve">
+    <value>panel1</value>
+  </data>
+  <data name="&gt;&gt;optUserEnteredScaleFactor.ZOrder" xml:space="preserve">
+    <value>9</value>
+  </data>
+  <data name="panel1.Location" type="System.Drawing.Point, System.Drawing">
+    <value>15, 59</value>
+  </data>
+  <data name="panel1.Size" type="System.Drawing.Size, System.Drawing">
+    <value>396, 133</value>
+  </data>
+  <data name="panel1.TabIndex" type="System.Int32, mscorlib">
+    <value>24</value>
+  </data>
+  <data name="&gt;&gt;panel1.Name" xml:space="preserve">
+    <value>panel1</value>
+  </data>
+  <data name="&gt;&gt;panel1.Type" xml:space="preserve">
+    <value>System.Windows.Forms.Panel, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;panel1.Parent" xml:space="preserve">
+    <value>$this</value>
+  </data>
+  <data name="&gt;&gt;panel1.ZOrder" xml:space="preserve">
+    <value>2</value>
+  </data>
+  <data name="cboElevField.Location" type="System.Drawing.Point, System.Drawing">
+    <value>189, 112</value>
+  </data>
+  <data name="cboElevField.Size" type="System.Drawing.Size, System.Drawing">
+    <value>139, 21</value>
+  </data>
+  <data name="cboElevField.TabIndex" type="System.Int32, mscorlib">
+    <value>28</value>
+  </data>
+  <data name="cboElevField.Visible" type="System.Boolean, mscorlib">
+    <value>False</value>
+  </data>
+  <data name="&gt;&gt;cboElevField.Name" xml:space="preserve">
+    <value>cboElevField</value>
+  </data>
+  <data name="&gt;&gt;cboElevField.Type" xml:space="preserve">
+    <value>System.Windows.Forms.ComboBox, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;cboElevField.Parent" xml:space="preserve">
+    <value>panel1</value>
+  </data>
+  <data name="&gt;&gt;cboElevField.ZOrder" xml:space="preserve">
+    <value>1</value>
   </data>
   <data name="btnGetScaleFromEditor.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
@@ -358,7 +523,7 @@
     <value>panel1</value>
   </data>
   <data name="&gt;&gt;btnGetScaleFromEditor.ZOrder" xml:space="preserve">
-    <value>0</value>
+    <value>2</value>
   </data>
   <data name="cboUnits.Enabled" type="System.Boolean, mscorlib">
     <value>False</value>
@@ -391,7 +556,7 @@
     <value>panel1</value>
   </data>
   <data name="&gt;&gt;cboUnits.ZOrder" xml:space="preserve">
-    <value>1</value>
+    <value>3</value>
   </data>
   <data name="btnChange.Enabled" type="System.Boolean, mscorlib">
     <value>False</value>
@@ -400,7 +565,7 @@
     <value>NoControl</value>
   </data>
   <data name="btnChange.Location" type="System.Drawing.Point, System.Drawing">
-    <value>321, 90</value>
+    <value>313, 86</value>
   </data>
   <data name="btnChange.Size" type="System.Drawing.Size, System.Drawing">
     <value>72, 21</value>
@@ -421,31 +586,31 @@
     <value>panel1</value>
   </data>
   <data name="&gt;&gt;btnChange.ZOrder" xml:space="preserve">
-    <value>2</value>
+    <value>4</value>
   </data>
-  <data name="txtServiceURL.Location" type="System.Drawing.Point, System.Drawing">
-    <value>23, 90</value>
+  <data name="txtElevationLyr.Location" type="System.Drawing.Point, System.Drawing">
+    <value>68, 87</value>
   </data>
-  <data name="txtServiceURL.Size" type="System.Drawing.Size, System.Drawing">
-    <value>292, 20</value>
+  <data name="txtElevationLyr.Size" type="System.Drawing.Size, System.Drawing">
+    <value>239, 20</value>
   </data>
-  <data name="txtServiceURL.TabIndex" type="System.Int32, mscorlib">
+  <data name="txtElevationLyr.TabIndex" type="System.Int32, mscorlib">
     <value>27</value>
   </data>
-  <data name="txtServiceURL.Text" xml:space="preserve">
-    <value> http://elevation.arcgis.com...Terrain/ImageServer</value>
+  <data name="txtElevationLyr.Text" xml:space="preserve">
+    <value> </value>
   </data>
-  <data name="&gt;&gt;txtServiceURL.Name" xml:space="preserve">
-    <value>txtServiceURL</value>
+  <data name="&gt;&gt;txtElevationLyr.Name" xml:space="preserve">
+    <value>txtElevationLyr</value>
   </data>
-  <data name="&gt;&gt;txtServiceURL.Type" xml:space="preserve">
+  <data name="&gt;&gt;txtElevationLyr.Type" xml:space="preserve">
     <value>System.Windows.Forms.TextBox, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="&gt;&gt;txtServiceURL.Parent" xml:space="preserve">
+  <data name="&gt;&gt;txtElevationLyr.Parent" xml:space="preserve">
     <value>panel1</value>
   </data>
-  <data name="&gt;&gt;txtServiceURL.ZOrder" xml:space="preserve">
-    <value>3</value>
+  <data name="&gt;&gt;txtElevationLyr.ZOrder" xml:space="preserve">
+    <value>5</value>
   </data>
   <data name="cboScaleMethod.Enabled" type="System.Boolean, mscorlib">
     <value>False</value>
@@ -454,7 +619,7 @@
     <value>Entered mean sea-level</value>
   </data>
   <data name="cboScaleMethod.Items1" xml:space="preserve">
-    <value>Elevation service (url)</value>
+    <value>Height field from an elevation layer</value>
   </data>
   <data name="cboScaleMethod.Location" type="System.Drawing.Point, System.Drawing">
     <value>23, 51</value>
@@ -475,7 +640,7 @@
     <value>panel1</value>
   </data>
   <data name="&gt;&gt;cboScaleMethod.ZOrder" xml:space="preserve">
-    <value>4</value>
+    <value>6</value>
   </data>
   <data name="txtScaleFactor.Location" type="System.Drawing.Point, System.Drawing">
     <value>189, 1</value>
@@ -502,7 +667,7 @@
     <value>panel1</value>
   </data>
   <data name="&gt;&gt;txtScaleFactor.ZOrder" xml:space="preserve">
-    <value>5</value>
+    <value>7</value>
   </data>
   <data name="optComputeForMe.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -532,7 +697,7 @@
     <value>panel1</value>
   </data>
   <data name="&gt;&gt;optComputeForMe.ZOrder" xml:space="preserve">
-    <value>6</value>
+    <value>8</value>
   </data>
   <data name="optUserEnteredScaleFactor.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -562,28 +727,7 @@
     <value>panel1</value>
   </data>
   <data name="&gt;&gt;optUserEnteredScaleFactor.ZOrder" xml:space="preserve">
-    <value>7</value>
-  </data>
-  <data name="panel1.Location" type="System.Drawing.Point, System.Drawing">
-    <value>15, 59</value>
-  </data>
-  <data name="panel1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>396, 133</value>
-  </data>
-  <data name="panel1.TabIndex" type="System.Int32, mscorlib">
-    <value>24</value>
-  </data>
-  <data name="&gt;&gt;panel1.Name" xml:space="preserve">
-    <value>panel1</value>
-  </data>
-  <data name="&gt;&gt;panel1.Type" xml:space="preserve">
-    <value>System.Windows.Forms.Panel, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;panel1.Parent" xml:space="preserve">
-    <value>$this</value>
-  </data>
-  <data name="&gt;&gt;panel1.ZOrder" xml:space="preserve">
-    <value>3</value>
+    <value>9</value>
   </data>
   <data name="chkDistanceDifference.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -613,7 +757,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;chkDistanceDifference.ZOrder" xml:space="preserve">
-    <value>2</value>
+    <value>1</value>
   </data>
   <data name="chkReportResults.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -640,33 +784,33 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;chkReportResults.ZOrder" xml:space="preserve">
-    <value>1</value>
+    <value>0</value>
   </data>
-  <data name="textBox1.Location" type="System.Drawing.Point, System.Drawing">
-    <value>17, 362</value>
+  <data name="lblHeightInput.AutoSize" type="System.Boolean, mscorlib">
+    <value>True</value>
   </data>
-  <data name="textBox1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>462, 20</value>
+  <data name="lblHeightInput.Location" type="System.Drawing.Point, System.Drawing">
+    <value>30, 90</value>
   </data>
-  <data name="textBox1.TabIndex" type="System.Int32, mscorlib">
-    <value>27</value>
+  <data name="lblHeightInput.Size" type="System.Drawing.Size, System.Drawing">
+    <value>32, 13</value>
   </data>
-  <data name="textBox1.Text" xml:space="preserve">
-    <value>http://myserver:6080/arcgis/rest/services/elevation/ImageServer/identify?geometry={"x":575505.5,"y":3733770}&amp;geometryType=esriGeometryPoint&amp;mosaicRule=&amp;pixelSize=0.5,0.5&amp;returnCatalogItems=false&amp;f=pjson</value>
+  <data name="lblHeightInput.TabIndex" type="System.Int32, mscorlib">
+    <value>47</value>
   </data>
-  <data name="textBox1.Visible" type="System.Boolean, mscorlib">
-    <value>False</value>
+  <data name="lblHeightInput.Text" xml:space="preserve">
+    <value>Field:</value>
   </data>
-  <data name="&gt;&gt;textBox1.Name" xml:space="preserve">
-    <value>textBox1</value>
+  <data name="&gt;&gt;lblHeightInput.Name" xml:space="preserve">
+    <value>lblHeightInput</value>
   </data>
-  <data name="&gt;&gt;textBox1.Type" xml:space="preserve">
-    <value>System.Windows.Forms.TextBox, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  <data name="&gt;&gt;lblHeightInput.Type" xml:space="preserve">
+    <value>System.Windows.Forms.Label, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="&gt;&gt;textBox1.Parent" xml:space="preserve">
-    <value>$this</value>
+  <data name="&gt;&gt;lblHeightInput.Parent" xml:space="preserve">
+    <value>panel1</value>
   </data>
-  <data name="&gt;&gt;textBox1.ZOrder" xml:space="preserve">
+  <data name="&gt;&gt;lblHeightInput.ZOrder" xml:space="preserve">
     <value>0</value>
   </data>
   <metadata name="$this.Localizable" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
